# Parking-Management-System

./: README.md
ParkingManagement/: ParkingManagement.cpp  ParkingManagement.h  ParkingManagement.pro  main.cpp
ParkingManagement/common/: Parking.h
ParkingManagement/implementation_parkings/: ParkingDaily.cpp  ParkingNormal.cpp  ParkingVIP.cpp
ParkingManagement/parking/: Parking.cpp
ParkingManagement/parkings/: ParkingDaily.h  ParkingNormal.h  ParkingVIP.h
ParkingManagement/user.cpp/: User.cpp
ParkingManagement/user.h/: User.h
ParkingManagement/users.cpp/: DailyUser.cpp  NormalUser.cpp  VIPUser.cpp
ParkingManagement/users.h/: DailyUser.h  NormalUser.h  VIPUser.h
qml/ParkingManagement/: CMakeLists.txt  CustomButton.qml  CustomInput.qml  DailyParkingPage.qml  LoginPage.qml  Main.qml  ManagerSetupPage.qml  NormalParkingPage.qml  ParkingManager.cpp  ParkingManager.h  RegisterPage.qml  User.cpp  User.h  UserProfilePage.qml  VIPParkingPage.qml  main.cpp
thread/ThreadTest/: MainClass.cpp  MainClass.h  ThreadTest.pro  Worker.cpp  Worker.h  main.cpp
thread/build-ThreadTest-Desktop-Debug/: Makefile  ThreadTest  moc_MainClass.cpp  moc_Worker.cpp
thread/build-ThreadTest-Desktop-Debug/.qtc_clangd/: compile_commands.json
thread/build-ThreadTest-Desktop-Debug/.qtc_clangd/.cache/clangd/index/: MainClass.cpp.D146E091BA6194E1.idx  MainClass.h.D7F9E7164BD477A4.idx  QCoreApplication.07E3A5CEB13EB233.idx  QObject.DE3A2F7E1723C85F.idx  Worker.cpp.C61AEFDB254CB831.idx  Worker.h.F88894C4EBCE7B79.idx  __stddef_max_align_t.h.0BB0BC20F124F553.idx  (+129 more)
